@@ -1,5 +1,7 @@
 * 2005-06-18 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Enable key length of line to be changed
+	- Put a comment in blank __init__.py files to support windows
+	unzip tools
 	
 * 2005-06-17 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Fix bug with unfilled symbols on key
